Add new mhairi content

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
     <!-- hero section -->
     <section class="about-hero">
         <div class="about-hero-img">
-            <img src="static/img/Mhairi_pics/mhairi_front_flowers.jpg" alt="Woman with coffee">
+            <img src="static/img/Mhairi_pics/MT-080.jpg" alt="Woman with coffee">
         </div>
         <div class="about-hero-text">
             <div class="about-hero-content">
@@ -104,20 +104,24 @@
                 <p class="normal-text">
                     I started a diploma in life coaching because I supported the ethos.  I loved the idea of helping people step beyond their psychology and leap forward into their dream life. I met an incredible partner and we had a beautiful baby boy even though I’d previously been terrified about how having children might affect my ‘success’ in my career….  The positive, life fulfilling, incredible magic stuff just kept coming.  All because I had actually spent the time, effort and energy in the one place it seemed most alien to: <strong>on myself</strong>. 
                 </p>
-                <!-- <p class="normal-text">
-                    So, that’s a nice story, but how does that help you? 
-                    Well, we are similar you and I.  I know you are talented and don’t recognize how powerful that is, I know you lack true self-confidence and I know you’re not as happy in your life as you could be.
-                    I also know that I can help you change all that and more. 
-                </p> -->
             </div>
         </div>
         <div class="about-detail-quote">
             <p class="logo-3">So, that’s a nice story, but how does that help you? </p>
             <p class="normal-text">
-                Well, we are similar you and I.  I know you are talented and don’t recognize how powerful that is, I know you lack true self-confidence and I know you’re not as happy in your life as you could be.
+                I’ve been where you are:
+            </p>
+            <p class="normal-text">
+                You know you have great skills but you often lack confidence
+            </p>
+            <p class="normal-text">
+                You're not as happy or focused in your life as you want to be
+            </p>
+            <p class="normal-text">
+                There are aspects of your life you want to alter but don't know how.
             </p>
             <br>
-            <p class="sect-subtitle">I also know that I can help you change all that and more.</p>
+            <p class="sect-subtitle">I emerged as my best self, now I’m going to help you do the same.</p>
         </div>
     </section>
     <!-- END: hero section -->
@@ -131,19 +135,19 @@
         </div>
         <div class="known-for-content">
             <div class="known-for-item">
-                <i class="fas fa-glass-cheers"></i>
+                <i class="fas fa-praying-hands"></i>
                 <p class="known-for-text normal-text">Teaching women that the power they seek lies within them </p>
             </div>
             <div class="known-for-item">
                 <i class="fas fa-graduation-cap"></i>
-                <p class="known-for-text normal-text">DISC certified I uncover your unique personality profile, help unlock motivators, drivers and fear to maximise performance </p>
+                <p class="known-for-text normal-text">DISC certified I help unlock motivators, drivers and fears to maximise performance </p>
             </div>
             <div class="known-for-item">
-                <i class="fas fa-microphone-alt"></i>
+                <i class="fab fa-instagram"></i>
                 <p class="known-for-text normal-text">Writing short but inspirational Instagram posts to keep you inspired daily</p>
             </div>
             <div class="known-for-item">
-                <i class="fas fa-praying-hands"></i>
+                <i class="fas fa-glass-cheers"></i>
                 <p class="known-for-text normal-text">Being a lover of bubbles…the kind you can drink 
                 </p>
             </div>
@@ -271,7 +275,7 @@
     
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/Y31A1153 lo res (1).jpg">
+        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-032.jpg">
             <div class="services-cta-content">
                 <h2 class="cta-title">
                     Get ready to start living
