--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
     <!-- Parralex hero section -->
     <section class="contact-hero-container">
-        <div class="contact-hero-parallax-window" data-parallax="scroll" data-image-src="static/img/core-img/woman-book.jpeg"></div>
+        <div class="contact-hero-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-031.jpg"></div>
         <div class="contact-hero-parallax">
             <h1 class="sect-title">
                 Did you say mail?!
@@ -86,7 +86,7 @@
                 Contact
             </h2>
             <h3 class="contact-form-subtitle normal-text">
-                Fill out the form below or email us at blahblah@coaching.com
+                Fill out the form below or email us @  info@mhairilifecoach.com
             </h3>
             <div class="contact-form">
                 <form name="Contact" action="" method="POST" data-netlify="true" encType="multipart/form-data">
@@ -118,7 +118,7 @@
             </div>
         </div>
         <div class="contact-form-img">
-            <img src="static/img/core-img/straight.jpeg" alt="woman standing straight">
+            <img src="static/img/Mhairi_pics/MT-054.jpg" alt="woman standing straight">
         </div>
     </section>
     <!-- END: contact form section -->
@@ -132,55 +132,52 @@
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">how did you get started as a life coach?</h3>
                 <p class="normal-text">
-                    Read the full story here! Jianbing cold-pressed pinterest paleo master cleanse, 
-                    forage ramps actually umami edison bulb cliche street art. Celiac 8-bit man braid,.
+                    Looking back now I can see that a personal disaster was absolutely the trigger point for me radically changing my life for the better (read the full story here). I knew I wanted to serve people like me and I wanted to do it in the most brilliant way possible….so I did a diploma in life coaching with the Coaching Academy.
                 </p>
             </div>
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">where are you located?</h3>
                 <p class="normal-text">
-                    Lorem ipsum dolor amet vice tacos enamel pin ipsum raw denim tattooed gochujang aliquip woke. 
+                    I’m currently based in bonnie Scotland however as coaching sessions are done via zoom I work with clients all over the world. 
                 </p>
             </div>
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">when is your next live event?</h3>
                 <p class="normal-text">
-                    Heirloom seitan selfies sriracha sint kinfolk flexitarian elit quinoa.  batch franzen 
-                    fam pug butcher. Sint air plant 8 actually vinyl literally. Cha
+                    Lockdown has changed the world so currently I won’t be running any live events.  However watch this space for my upcoming facebook group where we can get the party started again (albeit in our PJ’s with wine).
                 </p>
             </div>   
             <div class="faq-item">
-                <h3 class="sect-subtitle who-for-sub faq-sub">The difference between your main 2 offerings?</h3>
+                <h3 class="sect-subtitle who-for-sub faq-sub">The difference between your main 3 offerings?</h3>
                 <p class="normal-text">
-                    Read the full story here! Jianbing cold-pressed pinterest paleo master cleanse, 
-                    forage ramps actually umami edison bulb cliche street art. Celiac 8-bit man braid,.
+                    How difficult do you find the challenges you are bringing to transformation coaching? The main differences are length of program, frequency of sessions and depth of discovery therefore change. 
+                    Swift = short, frequent and broad. 
+                    Signature = medium, every 2-3 weeks and extensive. 
+                    Shift = Long, every 2-3 weeks and total.
                 </p>
             </div> 
             <div class="faq-item">
-                <h3 class="sect-subtitle who-for-sub faq-sub">do you offer one-on-one coaching?</h3>
+                <h3 class="sect-subtitle who-for-sub faq-sub">do you offer group coaching?</h3>
                 <p class="normal-text">
-                    Lorem ipsum dolor amet vice tacos enamel pin ipsum raw denim tattooed gochujang aliquip woke. 
+                    Ooooh good question!  I’m currently working on my group coaching course, keep your eyes peeled on instagram for sneak peaks coming soon.  
                 </p>
             </div> 
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">how can i sign up for your emails?! </h3>
                 <p class="normal-text">
-                    Heirloom seitan selfies sriracha sint kinfolk flexitarian elit quinoa.
-                    batch franzen fam pug butcher. Sint air plant 8 actually vinyl literally. Cha
+                    No one wants spammed with sales emails so I do a free resource email once per month only.  Sign up above!
                 </p>
             </div> 
             <div class="faq-item">
-                <h3 class="sect-subtitle who-for-sub faq-sub">what books do you recommend?</h3>
+                <h3 class="sect-subtitle who-for-sub faq-sub">WOULD YOU TELL ME IF COACHING WASN’T RIGHT FOR ME?</h3>
                 <p class="normal-text">
-                    Commodo godard duis anim pour-over woke kogi XOXO. Neutra deep v 
-                    irure etsy listicle williamsburg wolf cornhole se.
+                    Absolutely! I make it a priority to only take on clients for whom coaching is right for and I am a good fit for.  That's why the initial Clarity call is so important.  Its free, no obligation and within that we explore your needs and our chemistry.
                 </p>
             </div>  
             <div class="faq-item">
-                <h3 class="sect-subtitle who-for-sub faq-sub">what books do you recommend?</h3>
+                <h3 class="sect-subtitle who-for-sub faq-sub">DO YOU OFFER ANY DISCOUNTS?</h3>
                 <p class="normal-text">
-                    Commodo godard duis anim pour-over woke kogi XOXO. Neutra deep v 
-                    irure etsy listicle williamsburg wolf cornhole se.
+                    Yes!  I absolutely love the clients I sign up to my program, as such I offer a 10% refer a dream boat discount.  If you are a current client and you refer a friend who signs up then you BOTH receive a 10% discount on your programs. 
                 </p>
             </div> 
         </div>
