--- a/index.html
+++ b/index.html
@@ -64,19 +64,18 @@
     <!-- hero section -->
     <section class="home-hero container-fluid p-0">
         <div class="home-hero-img hero-showing">
-            <img src="static/img/Mhairi_pics/Y31A1153 lo res.jpg" alt="Woman with coffee">
+            <img src="static/img/Mhairi_pics/image.jpg" alt="Woman with coffee">
         </div>
         <div class="home-hero-img">
-            <img src="static/img/Mhairi_pics/mhairi_door.jpg" alt="Woman sitting on table">
+            <img src="static/img/Mhairi_pics/MT-043.jpg" alt="Woman sitting on table">
         </div>
         <div class="home-hero-text">
             <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">It's time to quit</p>
             <p class="animate__animated animate__fadeInRight animate__delay-1s">the tiring hustle</p> -->
-            <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">& break free to</p>
-            <p class="logo-sub animate__animated animate__fadeInRight animate__delay-2s">your best life ever</p> -->
-            <p class="animate__animated animate__fadeInLeft animate__delay-1s">I'm here to help you</p>
-            <p class="animate__animated animate__fadeInLeft animate__delay-1s">Release your power</p>
-            <p class="logo-sub animate__animated animate__fadeInRight animate__delay-1s">to Live your purpose</p>
+            <p class="animate__animated animate__fadeInLeft animate__delay-1s">Revolutionise</p>
+            <p class="animate__animated animate__fadeInLeft animate__delay-1s">your life from the</p>
+            <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">From the</p> -->
+            <p class="logo-sub animate__animated animate__fadeInRight animate__delay-1s">Inside out</p>
             <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s"></p> -->
         </div>
     </section>
@@ -87,21 +86,22 @@
         <div class="home-about-title">
             <h1 class="logo-2">Hey, I'm Mhairi</h1>
             <h2 class="fw-b home-about-subtitle ml-1">
-                Life coach for talented women who want to unlock their potential and feel their true worth.
+                Transformation coach for talented women who want more from life. 
             </h2>
         </div>
         <div class="home-about-img">
-            <img src="static/img/Mhairi_pics/Y31A1141 lo res (2).jpg" alt="Mhairi-garden">
+            <img src="static/img/Mhairi_pics/MT-064.jpg" alt="Mhairi-garden">
         </div>
         <div class="home-about-text">
             <p class="normal-text">
-                I worked for many years in senior roles with fancy job titles and amazing salaries, but I was never truly fulfilled.
+                I worked for many years in senior roles with fancy job titles and salaries, but I was never truly fulfilled.
             </p>
             <p class="normal-text">
-                After completing a Medical Biology degree I knew my passion lay out with the lab.  But what to do? Youthful ignorance firmly in hand I gravitated to where I thought I ‘should’.  I was led by society’s depiction of success; impressive title, six figure salary, nice car, you get the picture.  When I got there I realised I’d been so busy fitting into the mould of what each company needed me to be, I’d lost touch with my true passion….helping people.
+                After completing a Medical Biology degree I knew my passion lay out with the lab.  But what to do? 
+                Youthful ignorance firmly in hand I gravitated to where I thought I ‘should’.  I was led by society’s depiction of success.  When I got there I realised I’d been so busy becoming what I thought I was supposed to that I’d completely lost touch with what I actually wanted.
             </p>
             <p class="normal-text">
-                What changed my world?  Disaster.  It was the best thing that happened to me.  Read more about my journey to geniune fulfilment and how I can help you with yours.
+                What changed my world?  Complete disaster.  It was the best thing that happened to me.  Read more about my journey to happiness on my terms and how I can help you with yours.
             </p>
         </div>
         <div class="about-cta-btn">
@@ -114,13 +114,13 @@
     <section class="home-coaching">
         <div class="coaching-1-1">
             <div class="coaching-img">
-                <img src="static/img/Mhairi_pics/Y31A1100 lo res.jpg" alt="mhairi_garden">
+                <img src="static/img/Mhairi_pics/MT-118.jpg" alt="mhairi_garden">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">Who</h2>
                 <p class="normal-text"> 
-                    I know what you’re thinking, is coaching really right for me?  And if so, is Mhairi is the ‘one’?  Mindreading abilities aside these are exactly the questions you should be asking
-                    Take my quick fire quiz to find out.  Spoiler alert, the fact that you are here means the answers are YES and YES.
+                    I know what you’re thinking, is coaching the right thing to help me achieve my dream life?  And if so, is Mhairi the ‘one’?  Mind reading abilities aside these are exactly the questions you should be asking.  
+                    Read more and take my quick fire quiz to find out.  Spoiler alert, the fact that you are here means the answers are YES and YES. 
                 </p>
                 <div class="coach-cta-btn">
                     <a class="btn-white-sm" href="about.html">TELL ME MORE</a>
@@ -129,13 +129,13 @@
         </div>
         <div class="coaching-free">
             <div class="coaching-img">
-                <img src="static/img/Mhairi_pics/Y31A0958 lo res (1).jpg" alt="mhairi-laptop">
+                <img src="static/img/Mhairi_pics/MT-005.jpg" alt="mhairi-laptop">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">What</h2>
                 <p class="normal-text p-md-0">  
-                    So you’re all in on the idea of coaching but maybe you’ve had it before and it wasn’t quite the revelation it promised to be, or perhaps you’re new to coaching and have no idea what the journey would look like.                     
-                    Read more about how the programs work and which package suits you.
+                    So you’re all in on the idea of coaching but you need to know more about transformation coaching.  Specifically, what on earth it is?!
+                    Get the low down on this, learn how my programs work and uncover which package would best suit you.
                 </p>
                 <div class="coach-cta-btn">
                     <a class="btn-white-sm" href="services.html">TELL ME MORE</a>
@@ -149,8 +149,7 @@
             <div class="coaching-text">
                 <h2 class="coaching-title">Why</h2>
                 <p class="normal-text p-md-0">  
-                    I’m here to make a fundamental difference in the life you led.  You need to know if that can really happen, right? 
-                        Read feedback from some of my wonderful clients and find out how you too can live the life you love.
+                    I’m here to make a fundamental difference in the life you led.  You need to know if that can really happen.  Read feedback from some of my wonderful clients and find out how you too can live the life you love.
                     </p>
                 </p>
                 <div class="coach-cta-btn">
@@ -163,7 +162,7 @@
 
     <!-- Parralex quote section -->
     <section class="quote-parallax-container">
-        <div class="quote-parallax-window" data-parallax="scroll" data-image-src="static/img/bg-img/out-to-sea.jpg"></div>
+        <div class="quote-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-072.jpg"></div>
         <div class="quote">
             <h3 class="sect-subtitle">
                 Words I live by
@@ -227,7 +226,7 @@
 
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/core-img/woman-sit-table.jpg">
+        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-032.jpg">
             <div class="services-cta-content">
                 <h2 class="cta-title">
                     Get ready to start living
