--- a/testimonials.html
+++ b/testimonials.html
@@ -63,7 +63,7 @@
 
     <!-- Parralex hero section -->
     <section class="contact-hero-container">
-        <div class="contact-hero-parallax-window testimonial-hero" data-parallax="scroll" data-image-src="static/img/core-img/woman-headphones.jpeg"></div>
+        <div class="contact-hero-parallax-window testimonial-hero" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-057.jpg"></div>
         <!-- <div class="contact-hero-parallax">
             <h1 class="sect-title">
                 Did you say mail?!
@@ -85,7 +85,7 @@
     <!-- intro section -->
     <section class="services-intro testimonial-intro">
         <h2 class="about-detail-title sect-title intro-title">
-            So you're ready for a breakthrough?
+            Ready for a breakthrough?
         </h2>
         <h3 class="services-intro-subtitle rob-font">
             You are not alone!
@@ -271,7 +271,7 @@
 
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/core-img/woman-sit-table.jpeg">
+        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-032.jpg">
             <div class="services-cta-content">
                 <h2 class="cta-title">
                     Get ready to start living
