--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
     <!-- hero section -->
     <section class="services-hero">
         <div class="services-hero-img">
-            <img src="static/img/core-img/woman-book.jpeg" alt="Woman with coffee">
+            <img src="static/img/Mhairi_pics/MT-014.jpg" alt="Woman with coffee">
         </div>
         <div class="services-hero-text">
             <div class="services-hero-content">
@@ -85,7 +85,7 @@
     <!-- intro section -->
     <section class="services-intro">
         <h2 class="about-detail-title sect-title intro-title">
-            Aside from “how do I pronounce your name”... the SECOND most common question I am asked by clients is..
+            Aside from “how do I pronounce your name?... the SECOND most common question I am asked by clients is..
         </h2>
         <h3 class="services-intro-subtitle rob-font">
             What actually is transformation coaching?
@@ -93,10 +93,10 @@
         <div class="intro-text">
             <p class="normal-text">
                 Awesome question! 
-                In short, Transformation coaching helps you make profound changes to ultimately live happy and fulfilled. 
+                Transformation coaching helps you make profound changes to ultimately live happy and fulfilled. 
                 Together we take an inside out approach. So unlike traditional life coaching which centres around goals and external changes for surface level shifts, we go a little deeper….but not moonlight meditation deep, don’t worry. 
-                Through our work I help you find and harness your innate power and resilience (whether you believe it’s there or not). Following a process of unlocking blockers and mindful self-awareness you step beyond the psychology that’s been holding you back from living a life you love. 
-                .&nbsp;
+                Through our work I help you find and harness your innate power and resilience (whether you believe it’s there or not). We follow a process of unlocking blockers and mindful self-awareness so you can step beyond the psychology that’s been holding you back from living a life you love. 
+
             </p>
         </div>
         
@@ -130,7 +130,7 @@
             <div class="who-item">
                 <h3 class="sect-subtitle who-for-sub">Do you make...</h3>
                 <p class="normal-text">
-                    changes to your life but still don’t feel successful or fulfilled?  
+                    positive changes to your life but still don’t feel successful or fulfilled?  
                 </p>
             </div>  
         </div>
@@ -139,7 +139,7 @@
 
     <!-- Parralex testimonial section -->
     <section class="testimonial-container">
-        <div class="testimonial-parallax-window" data-parallax="scroll" data-image-src="static/img/bg-img/nature.jpeg"></div>
+        <div class="testimonial-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/mhairi_door.jpg"></div>
         <div class="testimonial-parallax">
             <div class="love-hearts">
                 <i class="fas fa-heart"></i>
@@ -251,16 +251,14 @@
                         Swift
                     </h2>
                     <p class="normal-text coaching-package-intro">
-                        I'm baby deep v lumbersexual viral skateboard. Scenester mlkshk drinking vinegar tumblr, 
-                        distillery tilde hot chicken VHS. Pug hell of blue bottle, la croix salvia heirloom banh 
-                        mi hexagon bitters trust fund. Prism offal poutine austin,
+                        You need a specific change and you need it fast?  Then Swift is for you.  Together we take an intensive 5-6 week journey to get you where you want to be, quickly.
                     </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
                         <ul class="includes-list">
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Complimentary 30 min Discovery Session
+                                30 min Discovery Session
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
@@ -288,16 +286,18 @@
                         signature
                     </h2>
                     <p class="normal-text coaching-package-intro">
-                        Hammock lo-fi truffaut brunch snackwave organic. Bitters flannel PBR&B, 
-                        sriracha franzen banjo truffaut bicycle rights whatever pinterest deep v typewriter. 
-                        Gochujang lyft man braid pour-over, flannel dreamcatcher craft
+                        Not sure what the issue is let alone how to change it? Signature has your name written all over it. This voyage of discovery will help you identify where you are, where you want to be and more importantly how to get there.  
                     </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
                         <ul class="includes-list">
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Complimentary 30 min Discovery Session
+                                DISC personality profiling session
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                45 min Discovery Session 
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
@@ -305,7 +305,7 @@
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Unlimited PDP exercises
+                                Personal Development Exercises
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
@@ -329,16 +329,21 @@
                         Shift
                     </h2>
                     <p class="normal-text coaching-package-intro">
-                        Readymade food truck pickled unicorn green juice. Ethical migas echo park keytar.
-                         Unicorn health goth pabst tilde kinfolk gluten-free. Everyday carry air plant wayfarers 
-                         chillwave leggings shoreditch. Marfa tousled organic,
+                        If personal metamorphosis were a coaching program, this would be it!
+                        We take a deep and enlightening three step journey through self discovery, self release and self direction.
+                        Want to live your dream life? Make the Shift.
+
                     </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
                         <ul class="includes-list">
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Complimentary 1hr min Discovery Session
+                                DISC personality profiling session
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                1hr min Discovery Session
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
@@ -346,11 +351,15 @@
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Unlimited PDP exercises
+                                Unlimited Personal Development Exercises
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
                                 Unlimited WhatsApp contact
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                Access to free resources
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
@@ -370,7 +379,7 @@
 
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/core-img/woman-sit-table.jpeg">
+        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/Y31A1125 lo res.jpg">
             <div class="services-cta-content">
                 <h2 class="cta-title">
                     Get ready to start living
