Adjust some images.
Add new parallax

--- a/index.html
+++ b/index.html
@@ -226,16 +226,17 @@
 
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-032.jpg">
-            <div class="services-cta-content">
-                <h2 class="cta-title">
-                    Get ready to start living
-                </h2>
-                <h3 class="cta-subtitle">
-                    The life of your dreams.
-                </h3>
-                <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free discovery call</a>
-            </div>
+        <div class="parallax-container rellax">
+            <img src="static/img/Mhairi_pics/MT-032.jpg" alt="">
+        </div>
+        <div class="services-cta-content">
+            <h2 class="cta-title">
+                Get ready to start living
+            </h2>
+            <h3 class="cta-subtitle">
+                The life of your dreams.
+            </h3>
+            <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free discovery call</a>
         </div>
     </section>
     <!-- END: parralex services section -->
@@ -330,8 +331,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- parrallex.js -->
-    <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>    
+    <!-- <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>     -->
+    <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="static/js/rellax.min.js"></script>
     <script src="static/js/main.js"></script>
 </body>
 </html>
