--- a/services.html
+++ b/services.html
@@ -275,9 +275,6 @@
                         </ul>
                     </figure>
                 </div>
-                <!-- <div class="signature-button about-cta-btn">
-                    <a class="" href="">I'm ready for this.</a>
-                </div>     -->
             </div>
             <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
@@ -318,9 +315,6 @@
                         </ul>
                     </figure>
                 </div>
-                <!-- <div class="signature-button about-cta-btn">
-                    <a class="" href="">I'm ready for this.</a>
-                </div>     -->
             </div>
             <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
@@ -368,9 +362,6 @@
                         </ul>
                     </figure>
                 </div>
-                <!-- <div class="signature-button about-cta-btn">
-                    <a class="" href="">I'm ready for this.</a>
-                </div>     -->
             </div>
         </div>
     </section>
@@ -379,7 +370,7 @@
 
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/Y31A1125 lo res.jpg">
+        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-032.jpg">
             <div class="services-cta-content">
                 <h2 class="cta-title">
                     Get ready to start living
