Compress images setup parallax

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     <!-- hero section -->
     <section class="home-hero container-fluid p-0">
         <div class="home-hero-img hero-showing">
-            <img src="static/img/Mhairi_pics/image.jpg" alt="Woman with coffee">
+            <img src="static/img/Mhairi_pics/home_hero_comp.jpg" alt="Woman with coffee">
         </div>
         <div class="home-hero-img">
-            <img src="static/img/Mhairi_pics/MT-043.jpg" alt="Woman sitting on table">
+            <img src="static/img/Mhairi_pics/home_hero_2_comp.jpg" alt="Woman sitting on table">
         </div>
         <div class="home-hero-text">
             <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">It's time to quit</p>
@@ -90,7 +90,7 @@
             </h2>
         </div>
         <div class="home-about-img">
-            <img src="static/img/Mhairi_pics/MT-064.jpg" alt="Mhairi-garden">
+            <img src="static/img/Mhairi_pics/mhairi_walking_comp.jpg" alt="Mhairi-garden">
         </div>
         <div class="home-about-text">
             <p class="normal-text">
@@ -114,7 +114,7 @@
     <section class="home-coaching">
         <div class="coaching-1-1">
             <div class="coaching-img">
-                <img src="static/img/Mhairi_pics/MT-118.jpg" alt="mhairi_garden">
+                <img src="static/img/Mhairi_pics/sitting_yelllow_coat_comp.jpg" alt="mhairi_garden">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">Who</h2>
@@ -129,7 +129,7 @@
         </div>
         <div class="coaching-free">
             <div class="coaching-img">
-                <img src="static/img/Mhairi_pics/MT-005.jpg" alt="mhairi-laptop">
+                <img src="static/img/Mhairi_pics/standing_at_window_comp.jpg" alt="mhairi-laptop">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">What</h2>
@@ -144,7 +144,7 @@
         </div>
         <div class="coaching-why">
             <div class="coaching-img">
-                <img src="static/img/Mhairi_pics/Y31A1048 lo res.jpg" alt="Hands in air">
+                <img src="static/img/Mhairi_pics/sitting_laptop_blue_comp.jpg" alt="Hands in air">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">Why</h2>
@@ -162,7 +162,9 @@
 
     <!-- Parralex quote section -->
     <section class="quote-parallax-container">
-        <div class="quote-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-072.jpg"></div>
+        <div class="parallax-container" >
+            <img src="static/img/Mhairi_pics/circus_far_comp.jpg" class="rellax" data-rellax-percentage=".5" alt="">
+        </div>
         <div class="quote">
             <h3 class="sect-subtitle">
                 Words I live by
@@ -226,8 +228,8 @@
 
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="parallax-container rellax">
-            <img src="static/img/Mhairi_pics/MT-032.jpg" alt="">
+        <div class="parallax-container" >
+            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="">
         </div>
         <div class="services-cta-content">
             <h2 class="cta-title">
@@ -236,7 +238,7 @@
             <h3 class="cta-subtitle">
                 The life of your dreams.
             </h3>
-            <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free discovery call</a>
+            <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free clarity call</a>
         </div>
     </section>
     <!-- END: parralex services section -->
@@ -268,16 +270,16 @@
                     </div>
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/mhairi_sitting.jpg" alt="">
+                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/mhairi_window.jpg" alt="">
+                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/mhairi_sitting.jpg" alt="">
+                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/floor.jpg" alt="">
+                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
                 </div>
                 <div class="latest-post-item">
                     <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
