Compress images and margins on home

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <img src="static/img/Mhairi_pics/home_hero_comp.jpg" alt="Woman with coffee">
         </div>
         <div class="home-hero-img">
-            <img src="static/img/Mhairi_pics/home_hero_2_comp.jpg" alt="Woman sitting on table">
+            <img src="static/img/Mhairi_pics/home_hero_2_comp.jpg" class="home-hero-2" alt="Woman sitting on table">
         </div>
         <div class="home-hero-text">
             <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">It's time to quit</p>
@@ -163,7 +163,7 @@
     <!-- Parralex quote section -->
     <section class="quote-parallax-container">
         <div class="parallax-container" >
-            <img src="static/img/Mhairi_pics/circus_far_comp.jpg" class="rellax" data-rellax-percentage=".5" alt="">
+            <img src="static/img/Mhairi_pics/circus-lane-tower.jpg" class="rellax" data-rellax-zindex="-1" data-rellax-percentage=".7" alt="">
         </div>
         <div class="quote">
             <h3 class="sect-subtitle">
