--- a/about.html
+++ b/about.html
@@ -397,6 +397,7 @@
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>  
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>  
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="static/js/rellax.min.js"></script>
     <script src="static/js/main.js"></script>
 </body>
 </html>
