Adjust margins on about

--- a/about.html
+++ b/about.html
@@ -108,9 +108,10 @@
         </div>
         <div class="about-detail-quote">
             <p class="logo-3">So, that’s a nice story, but how does that help you? </p>
-            <p class="normal-text">
+            <p class="sect-subtitle pink-text">
                 I’ve been where you are:
             </p>
+            <br>
             <p class="normal-text">
                 You know you have great skills but you often lack confidence
             </p>
@@ -121,7 +122,7 @@
                 There are aspects of your life you want to alter but don't know how.
             </p>
             <br>
-            <p class="sect-subtitle">I emerged as my best self, now I’m going to help you do the same.</p>
+            <p class="sect-subtitle pink-text">I emerged as my best self, now I’m going to help you do the same.</p>
         </div>
     </section>
     <!-- END: hero section -->
@@ -143,7 +144,7 @@
                 <p class="known-for-text normal-text">DISC certified I help unlock motivators, drivers and fears to maximise performance </p>
             </div>
             <div class="known-for-item">
-                <i class="fab fa-instagram"></i>
+                <i class="fas fa-graduation-cap"></i>
                 <p class="known-for-text normal-text">Writing short but inspirational Instagram posts to keep you inspired daily</p>
             </div>
             <div class="known-for-item">
@@ -216,7 +217,7 @@
         </div>
         <div class="crazy-about-content">
             <div class="crazy-about-img">
-                <img src="static/img/core-img/flowers-bunch.jpeg" alt="fresh-flowers">
+                <img src="static/img/Mhairi_pics/pexels-alesia-talkachova-2402326.jpg" alt="fresh-flowers">
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">Little detail</p>
@@ -227,10 +228,10 @@
                 <p class="favourite-text">This little bundle of cuteness</p>
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/core-img/baby.jpeg" alt="baby">
+                <img src="static/img/Mhairi_pics/roman.jpg" alt="baby">
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/core-img/heels.jpeg" alt="woman-heels">
+                <img src="static/img/Mhairi_pics/pexels-bongkarn-thanyakij-3751610.jpg" alt="woman-heels">
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">Favourite accessory</p>
@@ -241,10 +242,10 @@
                 <p class="favourite-text">Singing</p>
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/core-img/woman-wine.jpeg" alt="woman-wine">
+                <img src="static/img/Mhairi_pics/mic.jpg" alt="woman-wine">
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/core-img/cake.jpeg" alt="cake">
+                <img src="static/img/Mhairi_pics/pexels-adrianna-calvo-597933.jpg" alt="cake">
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">Treat</p>
@@ -256,14 +257,14 @@
                 <p class="favourite-text">Laughter in every day </p>
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/core-img/woman-book.jpeg" alt="woman-book">
+                <img src="static/img/Mhairi_pics/laughing-square.jpg" alt="woman-book">
             </div>
             <div class="crazy-about-text d-none d-md-block">
                 <p class="favourite-text fw-b">Relax</p>
                 <p class="favourite-text">A hot bath</p>
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/core-img/RuPaul_Image_Web.jpg" alt="">
+                <img src="static/img/Mhairi_pics/lede-the-witcher.jpg" alt="">
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">Recent Netlfix</p>
@@ -273,18 +274,19 @@
     </section>
     <!-- END: crazy about section -->
     
-    <!-- Parralex services section -->
+   <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-032.jpg">
-            <div class="services-cta-content">
-                <h2 class="cta-title">
-                    Get ready to start living
-                </h2>
-                <h3 class="cta-subtitle">
-                    The life of your dreams.
-                </h3>
-                <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free discovery call</a>
-            </div>
+        <div class="parallax-container" >
+            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="">
+        </div>
+        <div class="services-cta-content">
+            <h2 class="cta-title">
+                Get ready to start living
+            </h2>
+            <h3 class="cta-subtitle">
+                The life of your dreams.
+            </h3>
+            <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free clarity call</a>
         </div>
     </section>
     <!-- END: parralex services section -->
