Adjust margins on serivces xs

--- a/services.html
+++ b/services.html
@@ -139,7 +139,9 @@
 
     <!-- Parralex testimonial section -->
     <section class="testimonial-container">
-        <div class="testimonial-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/mhairi_door.jpg"></div>
+        <div class="parallax-container" >
+            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="testimonial-parallax-window rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="">
+        </div>
         <div class="testimonial-parallax">
             <div class="love-hearts">
                 <i class="fas fa-heart"></i>
@@ -148,7 +150,7 @@
                 <i class="fas fa-heart"></i>
                 <i class="fas fa-heart"></i>
             </div>
-            <p class="quote-text-dark">
+            <p class="quote-text-white">
                 “Mhairi was hugely inspirational and made me realise I can do anything I set my mind on” 
             </p>
             <p class="normal-text">
@@ -370,16 +372,17 @@
 
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-032.jpg">
-            <div class="services-cta-content">
-                <h2 class="cta-title">
-                    Get ready to start living
-                </h2>
-                <h3 class="cta-subtitle">
-                    The life of your dreams.
-                </h3>
-                <a class="btn-dark-pink" href="contact.html">Book in your free discovery call</a>
-            </div>
+        <div class="parallax-container" >
+            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="">
+        </div>
+        <div class="services-cta-content">
+            <h2 class="cta-title">
+                Get ready to start living
+            </h2>
+            <h3 class="cta-subtitle">
+                The life of your dreams.
+            </h3>
+            <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free clarity call</a>
         </div>
     </section>
     <!-- END: parralex services section -->
@@ -478,6 +481,7 @@
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>  
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>  
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="static/js/rellax.min.js"></script>
     <script src="static/js/main.js"></script>
 </body>
 </html>
